--- a/styles/signup.css
+++ b/styles/signup.css
@@ -82,3 +82,17 @@ button{
     color: #a43820 ;
     text-decoration: none;
 }
+@media (min-width:320px) and (max-width:480px){
+    .container{
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+    .grid-item{
+        height: 50vh;
+    }
+    .bg-img{
+        height: 38vh !important;
+        margin: 30px;
+        border-radius: 20px;
+    }
+}
