--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,3 +302,55 @@
     margin: 0;
     color: #fff;
 }
+
+@media (min-width:320px) and (max-width:480px) {
+    .container{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+    .hero {
+        display: grid !important;
+        grid-template-columns: 1fr !important; 
+        align-items: center !important; 
+        width: 100% !important;
+        position: relative;
+        top: 50px;
+    }
+    
+    .textt {
+        display: none;
+    }
+    
+    .imagee {
+        width: 100%; 
+        height: 400px;
+        object-fit: cover;
+    }
+    .logo{
+        font-size: 1rem;
+    }
+    .links{
+        font-size: .8rem;
+        gap: 10px;
+    }
+    .cart-panel{
+        width: 200px;
+    }
+    .to{
+        font-size: 1rem;
+    }
+    .total_text{
+        font-size: 1rem;
+    }
+    .img-holder{
+        height: 46px;
+        width: 40px;
+    }
+    .cart-details{
+        font-size: .8rem;
+    }
+    .btn{
+        gap: 10px;
+    }
+}
